--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,19 @@ footer {
   font-size: 0.9em;
   color: #666;
 }
+
+.button {
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  font-size: 16px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button-breakdown{
+  background-color: #4285f4;
+}
