--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@ body {
   text-align: center;
   padding: 20px;
   margin: 0;
-  background-color: #f4f4f9;
-  color: #333;
+  background-color: #7a4d0a;
+  color: #000000;
 }
 
 header {
-  background-color: #4285f4;
+  background-color: #105e0b;
   color: white;
   padding: 20px;
   border-radius: 8px;
@@ -31,7 +31,7 @@ main {
 section {
   margin: 20px 0;
   padding: 15px;
-  background-color: white;
+  background-color: #e18600;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -39,7 +39,7 @@ section {
 section h2 {
   margin: 0 0 10px;
   font-size: 1.4em;
-  color: #4285f4;
+  color: #000000;
 }
 
 section p {
@@ -51,7 +51,7 @@ section p {
 footer {
   margin-top: 20px;
   font-size: 0.9em;
-  color: #666;
+  color: #000000;
 }
 
 .button {
@@ -67,5 +67,5 @@ footer {
 }
 
 .button-breakdown{
-  background-color: #4285f4;
+  background-color: #e18600;
 }
